--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "description": "A web extension to detect if websites you browse are hosted by Clever Cloud",
   "scripts": {
-    "prebuild": "tsc --noEmit",
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore ./src",
+    "check": "tsc --noEmit",
+    "prebuild": "npm run check && npm run lint",
     "build": "parcel build src/manifest.json --no-optimize"
   },
   "author": "David Sferruzza <david.sferruzza@gmail.com>",
@@ -11,6 +13,9 @@
   "devDependencies": {
     "@parcel/config-webextension": "^2.9.3",
     "@types/webextension-polyfill": "^0.10.1",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
     "parcel": "^2.9.3",
     "typescript": "^5.1.6"
   },
